fixed vertical alignment issue with the skills section

--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -15,6 +15,10 @@
   min-height: 32rem;
 }
 
+.wrapper {
+  align-self: center;
+}
+
 .skills {
   display: flex;
   flex-wrap: wrap;
